# tinymfv

./: .gitignore  README.md  justfile  pyproject.toml
data/: calibration.json  consistency.jsonl  consistency_airisk.jsonl  consistency_scifi.jsonl  multilabel.jsonl  multilabel_airisk.jsonl  multilabel_classic.jsonl  multilabel_clifford_ai.jsonl  multilabel_scifi.jsonl  separation_ai-actor_summary.json  separation_classic.jsonl  separation_classic_summary.json  separation_clifford_ai.jsonl  separation_scifi.jsonl  separation_scifi_summary.json  validation.jsonl  validation_scifi.jsonl  vignettes_ai-actor_other_violate.jsonl  vignettes_ai-actor_self_violate.jsonl  vignettes_airisk_other_violate.jsonl  vignettes_airisk_self_violate.jsonl  vignettes_classic_other_violate.jsonl  vignettes_classic_self_violate.jsonl  vignettes_other_violate.jsonl  vignettes_scifi_other_violate.jsonl  vignettes_scifi_self_violate.jsonl  vignettes_self_violate.jsonl
docs/: 2025_clifford_paper.md  RESEARCH_JOURNAL.md
docs/img/: README.md
docs/img/wvs/: wvs_model_ci.md
docs/mfv_russia/: MJ_Manuscript_2024.md
docs/reviews/: mfq2_authority_pca_n_bootstrap_20260701.csv  p3_api_sampling_uat.md  p4_wvs_data_foundation.md
docs/reviews/readme_comprehension_final_20260630_234536/: panel_deepseek-v4-flash.json  panel_gemini-3.1-flash-lite.json  panel_gemma-3-12b-it.json  panel_gpt-oss-120b.json  panel_kimi-k2.7-code.json  panel_nemotron-3-super-120b-a12b.json  prompt.md
docs/reviews/readme_comprehension_final_20260701_181649/: panel_deepseek-v4-flash.md  panel_gemini-3.1-flash-lite.md  panel_gemma-3-12b-it.md  panel_gpt-oss-120b.md  panel_kimi-k2.7-code.md  panel_nemotron-3-super-120b-a12b.md  prompt.md
docs/reviews/readme_comprehension_merge_20260709/: panel_deepseek-v4-flash.json  panel_gemini-3.1-flash-lite.json  panel_gemma-3-12b-it.json  panel_gemma-3-12b-it_clean.json  panel_gemma-3-12b-it_rerun.json  panel_gpt-oss-120b.json  panel_kimi-k2.7-code.json  panel_kimi-k2.7-code_clean.json  panel_nemotron-3-super-120b-a12b.json  panel_nemotron-3-super-120b-a12b_clean.json  panel_nemotron-3-super-120b-a12b_rerun.json  prompt.md
docs/spec/: 20260501_n_token_eval.md  20260630_authority_steer_pipeline.md  20260630_readme_plots.md
scripts/: 01_download.py  02_rewrite.py  02a_backfill_labels.py  02b_transcribe_ai_actor.py  02b_transcribe_clifford_ai.py  03_eval.py  04_validate.py  05_drift.py  05_upload_hf.py  06_consistency.py  06b_separation.py  07_multilabel.py  07a_merge_labels.py  07b_review.py  08_multibool_baseline.py  09_forced_choice.py  _compare_4b_vs_human.py  _proto_rowcenter.py  _xfound.py  bootstrap_mfq2_sample_n.py  plot_steer_showcase.py  probe_api_readout.py  probe_iw_themes.py  probe_mfv_think_budget.py  probe_word_readout.py  probe_wvs_foundation.py  smoke_batch_parity.py  summarize_showcase_effects.py  wvs_map.py
src/moralmaps/: __init__.py  metrics.py  readouts.py
src/tinymfv/: __init__.py  administer.py  core.py  data.py  eval.py  guided.py  instrument.py  instruments.py  iw_axes.py  labelplace.py  maps.py  read.py  read_api.py  readouts.py  value_axes.py  zones.py
src/tinymfv/data/human/: 16pf_country_factors.csv  MFV_country_norms_NOTE.md  big5_country_factors.csv  humor_styles_country_factors.csv  mfq2_country_foundations.csv  mfv_country_factors.csv  mfv_country_factors_SOURCES.md
src/tinymfv/data/surveys/16pf/: keying.json  questionnaire.json  questionnaire_inverted.json  questionnaire_negated.json
src/tinymfv/data/surveys/big5/: keying.json  questionnaire.json  questionnaire_inverted.json  questionnaire_negated.json
src/tinymfv/data/surveys/humor_styles/: keying.json  questionnaire.json  questionnaire_inverted.json  questionnaire_negated.json
src/tinymfv/data/surveys/mfq2/: forward.json  (+2 more)
tests/: test_instrument.py  test_metrics.py
