[project]
name = "tiny-mfv"
version = "0.1.0"
description = "Tiny moral-foundations vignettes eval (Clifford 2015 classic + paraphrase configs) for steering checkpoints."
requires-python = ">=3.11"
dependencies = [
    "transformers>=5.7",
    "torch",
    "accelerate",
    "pandas",
    "loguru",
    "python-dotenv",
    "tyro",
    "openai>=1.40",
    "httpx",
    "tqdm",
    "tabulate",
    "datasets",
    "numpy",
]

[project.optional-dependencies]
# tinymfv.maps (culture-map + range viz) only; `import tinymfv` and the evals stay headless,
# numeric-only consumers (steering-lite) skip this. Install with `pip install tiny-mfv[maps]`.
maps = [
    "matplotlib>=3.8",
    "textalloc>=1.2.3",   # non-overlapping label placement on the maps
]

[dependency-groups]
dev = [
    "openrouter-wrapper",
    "scipy>=1.17.1",
]

[tool.uv.sources]
openrouter-wrapper = { git = "https://github.com/wassname/openrouter_wrapper" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinymfv"]
